# Geliosphere

./: .gitignore  AbstractAlgorithmFactory_8hpp.html  AbstractAlgorithmFactory_8hpp__dep__incl.map  AbstractAlgorithmFactory_8hpp__dep__incl.md5  AbstractAlgorithmFactory_8hpp__incl.map  AbstractAlgorithmFactory_8hpp__incl.md5  AbstractAlgorithmFactory_8hpp_source.html  AbstractAlgorithm_8hpp.html  AbstractAlgorithm_8hpp__dep__incl.map  AbstractAlgorithm_8hpp__dep__incl.md5  AbstractAlgorithm_8hpp__incl.map  AbstractAlgorithm_8hpp__incl.md5  AbstractAlgorithm_8hpp_source.html  CMakeLists.txt  CosmicConstants_8cu.html  CosmicConstants_8cu__incl.map  CosmicConstants_8cu__incl.md5  CosmicConstants_8cuh.html  CosmicConstants_8cuh__dep__incl.map  CosmicConstants_8cuh__dep__incl.md5  CosmicConstants_8cuh__incl.map  CosmicConstants_8cuh__incl.md5  CosmicFactory_8hpp.html  CosmicFactory_8hpp__incl.map  CosmicFactory_8hpp__incl.md5  CosmicFactory_8hpp_source.html  CosmicUtils_8cuh.html  CosmicUtils_8cuh__dep__incl.map  CosmicUtils_8cuh__dep__incl.md5  CosmicUtils_8cuh__incl.map  CosmicUtils_8cuh__incl.md5  CudaErrorCheck_8cuh.html  CudaErrorCheck_8cuh__dep__incl.map  CudaErrorCheck_8cuh__dep__incl.md5  CudaErrorCheck_8cuh__incl.map  CudaErrorCheck_8cuh__incl.md5  Dockerfile  Dockerfile.CPU  FileUtils_8hpp.html  FileUtils_8hpp__dep__incl.map  (+214 more)
.devcontainer/CPU/: Dockerfile  devcontainer.json
.devcontainer/GPU/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
Algorithm/: CMakeLists.txt
Algorithm/include/: AbstractAlgorithm.hpp  BatchRun.hpp  GeliosphereAlgorithm.hpp  InteractiveMode.hpp  OneDimensionBpAlgorithm.hpp  OneDimensionBpResults.hpp  OneDimensionFpAlgorithm.hpp  OneDimensionFpResults.hpp  ResultConstants.hpp  SolarPropLikeAlgorithm.hpp  ThreeDimensionBpAlgorithm.hpp  TwoDimensionBpAlgorithm.hpp  TwoDimensionBpResults.hpp
Algorithm/src/: BatchRun.cpp  GeliosphereAlgorithm.cpp  InteractiveMode.cpp  OneDimensionBpAlgorithm.cpp  OneDimensionBpResults.cpp  OneDimensionFpAlgorithm.cpp  OneDimensionFpResults.cpp  SolarPropLikeAlgorithm.cpp  ThreeDimensionBpAlgorithm.cpp  TwoDimensionBpAlgorithm.cpp  TwoDimensionBpResults.cpp  geliosphere_batch_input_paramaters.csv
CUDAKernel/: CMakeLists.txt
CUDAKernel/include/: AbstractGpuSimulation.hpp  CosmicConstants.cuh  CosmicUtils.cuh  CudaErrorCheck.cuh  GeliosphereGpuModel.hpp  GeliosphereModel.cuh  OneDimensionBpGpuModel.hpp  OneDimensionBpGpuSimulation.hpp  OneDimensionBpModel.cuh  OneDimensionBpSimulation.cuh  OneDimensionFpGpuModel.hpp  OneDimensionFpGpuSimulation.hpp  OneDimensionFpModel.cuh  OneDimensionFpSimulation.cuh  SolarPropLikeGpuModel.hpp  SolarPropLikeModel.cuh  ThreeDimensionBpGpuSimulation.hpp  ThreeDimensionBpSimulation.cuh  TwoDimensionBpGpuSimulation.hpp  TwoDimensionBpSimulation.cuh
CUDAKernel/src/: CosmicConstants.cu  CosmicUtils.cu  GeliosphereGpuModel.cpp  GeliosphereModel.cu  OneDimensionBpGpuModel.cpp  OneDimensionBpGpuSimulation.cpp  OneDimensionBpModel.cu  OneDimensionBpSimulation.cu  OneDimensionFpGpuModel.cpp  OneDimensionFpGpuSimulation.cpp  OneDimensionFpModel.cu  OneDimensionFpSimulation.cu  SolarPropLikeGpuModel.cpp  SolarPropLikeModel.cu  ThreeDimensionBpGpuSimulation.cpp  ThreeDimensionBpSimulation.cu  TwoDimensionBpGpuSimulation.cpp  TwoDimensionBpSimulation.cu
Constants/: CMakeLists.txt
Constants/include/: MeasureValuesTransformation.hpp  ParamsCarrier.hpp  ParseParams.hpp  TomlSettings.hpp
Constants/src/: MeasureValuesTransformation.cpp  ParseParams.cpp  TomlSettings.cpp
CpuImplementations/: CMakeLists.txt
CpuImplementations/include/: AbstractCpuModel.hpp  AbstractCpuSimulation.hpp  Constants.hpp  GeliosphereCpuModel.hpp  IGeliosphereCpuModel.hpp  IOneDimensionBpCpuModel.hpp  IOneDimensionFpCpuModel.hpp  OneDimensionBpCpuModel.hpp  OneDimensionBpCpuSimulation.hpp  OneDimensionFpCpuModel.hpp  OneDimensionFpCpuSimulation.hpp  SolarPropLikeCpuModel.hpp  ThreeDimensionBpCpuSimulation.hpp  TwoDimensionBpCpuSimulation.hpp
CpuImplementations/src/: GeliosphereCpuModel.cpp  OneDimensionBpCpuModel.cpp  OneDimensionBpCpuSimulation.cpp  OneDimensionFpCpuModel.cpp  OneDimensionFpCpuSimulation.cpp  SolarPropLikeCpuModel.cpp  ThreeDimensionBpCpuSimulation.cpp  TwoDimensionBpCpuSimulation.cpp
Factory/: CMakeLists.txt
Factory/include/: AbstractAlgorithmFactory.hpp  CosmicFactory.hpp
Factory/src/: AbstractAlgorithmFactory.cpp  CosmicFactory.cpp
Fetching/: Geliosphere_K0_phi_table.csv  Pipfile  fetch_script.py  fetch_script_log.txt  table_data_flow_speed.csv  table_data_phi.csv
Fetching/table_data/: table_data_flow_speed.csv  table_data_phi.csv  table_data_tilt_angle.csv
Input/: CMakeLists.txt
Input/include/: InputValidation.hpp  MeasureValuesTransformation.hpp  ParamsCarrier.hpp  ParseParams.hpp
Input/src/: InputValidation.cpp  MeasureValuesTransformation.cpp  ParamsCarrier.cpp  ParseParams.cpp  TomlSettings.cpp
ModelDocs/: 1D_models_description.ipynb  geliosphere-model-description.ipynb
ModelDocs/.ipynb_checkpoints/: 1D_models_description-checkpoint.ipynb  (+1 more)
Utils/: CMakeLists.txt
Utils/include/: FileUtils.hpp  InputValidation.hpp  ResultsUtils.hpp
Utils/src/: FileUtils.cpp  InputValidation.cpp  ResultsUtils.cpp
Visualization/: .gitignore  KET_P116_P190_1994-1998.csv  Pipfile  README.md  batch_run_geliosphere.py  create_plot.py  create_ulysses_Geliosphere_flux.py  geliosphere_batch_input_paramaters.csv  prepare_input_based_on_ulysses.py  prepare_spectra.py  solarprop_input_paramaters_1AU_theta_90.csv  ulytrj_helio.asc.txt  ulytrj_helio_fmt.txt
lib/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enums_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+15 more)
(+7 files in other folders)
